--- a/assets/scss/_header-footer.scss
+++ b/assets/scss/_header-footer.scss
@@ -10,7 +10,15 @@
         padding: 18px 0 18px 0;
         .logo {
             .img-logo {
-                width: 35%;
+                width: 35% !important;
+            }
+        }
+    }
+    @media screen and (max-width: 767px) {
+        padding: 30px;
+        .logo {
+            img {
+                width: 30%;
             }
         }
     }
@@ -20,7 +28,7 @@
     .logo-footer {
         width: 50px;
     }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 767px) {
         padding: 20px;
         h6 {
             font-size: 18px;
