--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,131 +1,157 @@
 .int {
+    .txt {
+        font-size: 25px;
+        text-align: center;
+        padding: 30px 0 30px 0;
+    }
     @media screen and (max-width: 767px) {
         .txt {
             font-size: 15px;
-            text-align: center;
             padding: 20px 0 20px 0;
             font-family: $text;
         }
     }
 }
+
 .reserv {
+    padding: 30px;
     background-color: #F7F7F7;
-    @media screen and (max-width: 767px) {
-        padding: 30px;
-        h1, 
-        p {
-            text-align: center;
+    .row {
+        flex-direction: column;
+    }
+    h1,
+    p {
+        text-align: center;
+        font-family: $text;
+        margin-bottom: 20px;
+    }
+    .btn {
+        text-align: center;
+        button {
+            border: none;
+            padding: 15px;
+            font-size: 15px;
+            color: $white;
+            border-radius: 50px;
             font-family: $text;
-            margin-bottom: 20px;
-        }
-        .btn {
-            text-align: center;
-            button {
-                border: none;
-                padding: 15px;
-                font-size: 15px;
-                color: $white;
-                border-radius: 50px;
-                font-family: $text;
-                background: linear-gradient($pink, $purple);
-            }
+            background: linear-gradient($pink, $purple);
         }
     }
 }
+
 .fonct {
+    padding: 50px;
     background-color: $white;
-    @media screen and (max-width: 767px) {
-        h2 {
-            margin-bottom: 30px;
-        }
-        padding: 50px 20px 50px 20px;
-        .btn-1,
-        .btn-2,
-        .btn-3 {
-            display: flex;
-            margin-bottom: 30px;
-            .number {
+    .row {
+        flex-direction: column;
+    }
+    .btn-1,
+    .btn-2,
+    .btn-3 {
+        display: flex;
+        margin-bottom: 30px;
+
+        .number {
+            padding: 5px;
+            position: absolute;
+            border-radius: 50%;
+            background: $purple;
+            margin: 25px 0px 25px -11px;
+
+            span {
                 padding: 5px;
-                position: absolute;
-                border-radius: 50%;
-                background: $purple;
-                margin: 25px 0px 25px -11px;
-                span {
-                    padding: 5px;
-                    color: $white;
-                    font-family: $text;
-                }
-            }
-            button {
-                width: 100%;
-                border: none;
-                padding: 30px;
-                display: flex;
-                font-size: 15px;
-                border-radius: 20px;
+                color: $white;
                 font-family: $text;
-                background-color: #F7F7F7;
-                i {
-                    color: grey;
-                    font-size: 20px;
-                    margin-right: 15px;
-                }
-                .icon {
-                    margin-left: 15px;
-                }
-                .p-t {
-                    font-weight: 600;
-                    text-align: center;
-                }
+            }
+        }
+
+        button {
+            width: 100%;
+            border: none;
+            padding: 30px;
+            display: flex;
+            font-size: 15px;
+            border-radius: 20px;
+            font-family: $text;
+            background-color: #F7F7F7;
+
+            i {
+                color: grey;
+                font-size: 20px;
+                margin-right: 15px;
+            }
+
+            .icon {
+                margin-left: 15px;
+            }
+
+            .p-t {
+                font-weight: 600;
+                text-align: center;
             }
         }
     }
+    h2 {
+        margin-bottom: 30px;
+    }
+    @media screen and (max-width: 767px) {
+        padding: 50px 20px 50px 20px;
+    }
 }
+
 .restau {
     padding: 30px 20px 30px 20px;
-    @media screen and (max-width: 767px) {
-        .cards-list {
-            margin: 30px 0px 30px 0px;
+    .cards-list {
+        margin: 30px 0px 30px 0px;
+    }
+    .card {
+        margin-bottom: 20px;
+        position: relative;
+        flex-direction: column;
+        background-color: $white;
+        img {
+            height: 300px;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            @media screen and (max-width: 480px) {
+                height: 210px;
+            }
         }
-        .card {
-            margin-bottom: 20px;
-            position: relative;
-            flex-direction: column;
-            background-color: $white;
-            img {
-                height: 184px;
-                border-top-left-radius: 20px;
-                border-top-right-radius: 20px;
+
+        .new {
+            padding: 6px;
+            position: absolute;
+            background-color: #99E2D0;
+
+            p {
+                font-weight: 800;
+                font-family: $text;
             }
-            .new {
-                padding: 6px;
-                position: absolute;
-                background-color: #99E2D0;
-                p {
-                    font-weight: 800;
-                    font-family: $text;
-                }
+        }
+
+        .card-body {
+            padding: 15px 20px 25px 20px;
+            h5 {
+                font-size: 17px;
+                font-weight: 600;
+                font-family: $text;
             }
-            .card-body {
-                padding: 15px 20px 25px 20px;
-                h5 {
-                    font-size: 17px;
-                    font-weight: 600;
-                    font-family: $text;
-                }
-                p {
-                    font-weight: 300;
-                    font-family: $text;
-                }
-                .favoris {
-                    text-align: end;
-                    margin-top: -4%;
-                    .ic {
-                        i {
-                            font-size: 25px;
-                            &:active {
-                                color: $purple;
-                            }
+
+            p {
+                font-weight: 300;
+                font-family: $text;
+            }
+
+            .favoris {
+                text-align: end;
+                margin-top: -2%;
+
+                .ic {
+                    i {
+                        font-size: 25px;
+
+                        &:active {
+                            color: $purple;
                         }
                     }
                 }
