--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -15,13 +15,6 @@ $text: 'Roboto', sans-serif;
     padding: 0;
     box-sizing: border-box;
 }
-.row {
-    width: 100%;
-    display: flex;
-    @media screen and (max-width: 480px) {
-        flex-direction: column;
-    }
-}
 .container {
     max-width: 1980px;
 }
@@ -36,6 +29,9 @@ h2,
 h3 {
     font-size: 22px;
     font-weight: 800;
+    font-family: $text;
+}
+p {
     font-family: $text;
 }
 .shad {
