--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,19 +8,41 @@
   max-width: 1980px;
 }
 
-body {
+.int,
+.restau {
   background-color: #EAEAEA;
 }
 
 img {
-  width: 100%;
   object-fit: cover;
+}
+
+.h-title {
+  font-size: 32px;
+  font-weight: 600;
+  font-family: "Shrikhand", cursive;
+}
+@media screen and (max-width: 767px) {
+  .h-title {
+    font-size: 22px;
+  }
+}
+
+.m-title {
+  width: 53px;
+  font-size: 18px;
+  font-weight: 400;
+  padding-bottom: 2px;
+  margin: 20px 0 20px 0;
+  text-transform: uppercase;
+  border-bottom: 2px solid #99E2D0;
+  font-family: "Roboto", sans-serif;
 }
 
 h2,
 h3 {
   font-size: 22px;
-  font-weight: 800;
+  font-weight: 600;
   font-family: "Roboto", sans-serif;
 }
 
@@ -31,6 +53,108 @@ p {
 .shad {
   border-radius: 20px;
   box-shadow: 0px 0px 16px #bebebe;
+}
+
+.btn-princ {
+  text-align: center;
+}
+.btn-princ button {
+  border: none;
+  padding: 15px;
+  font-size: 15px;
+  color: #FFFFFF;
+  border-radius: 50px;
+  font-family: "Roboto", sans-serif;
+  background: linear-gradient(#FF79DA, #9356DC);
+}
+
+.btn-menu {
+  width: 100%;
+  border: none;
+  padding: 30px;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+}
+@media screen and (max-width: 767px) {
+  .btn-menu {
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+}
+.btn-menu .tit-c {
+  text-align: left;
+}
+.btn-menu .tit-c .ent-title {
+  font-size: 18px;
+  font-weight: 800;
+  font-family: "Roboto", sans-serif;
+}
+.btn-menu .txt {
+  display: flex;
+}
+.btn-menu .txt p {
+  font-size: 18px;
+  font-weight: 300;
+  font-family: "Roboto", sans-serif;
+}
+.btn-menu .valid-btn {
+  right: 0;
+  position: absolute;
+}
+.btn-menu .valid-btn .price {
+  font-size: 18px;
+  font-weight: 800;
+  font-family: "Roboto", sans-serif;
+}
+@media screen and (max-width: 767px) {
+  .btn-menu .valid-btn .price {
+    margin-right: 10px;
+  }
+}
+.btn-menu .valid-btn .valid {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: #99E2D0;
+}
+@media screen and (max-width: 767px) {
+  .btn-menu .valid-btn .valid {
+    margin-right: -18px;
+    padding: 30px 30px 18px 30px;
+  }
+}
+.btn-menu .valid-btn .valid i {
+  color: #FFFFFF;
+  font-size: 20px;
+}
+@media screen and (max-width: 767px) {
+  .btn-menu .valid-btn {
+    right: 34px;
+    margin-top: -28px;
+  }
+}
+
+.favoris {
+  position: absolute;
+  right: 0;
+}
+.favoris .ic i,
+.favoris .heart i {
+  font-size: 25px;
+  background: linear-gradient(#9356DC, #FF79DA);
+}
+.favoris .ic i:active, .favoris .ic i:focus, .favoris .ic i:hover,
+.favoris .heart i:active,
+.favoris .heart i:focus,
+.favoris .heart i:hover {
+  color: #9356DC;
+  transition: background 4s;
+  background: linear-gradient(#9356DC, #FF79DA);
+}
+
+.favoris-ind {
+  margin-top: -40px;
+  margin-right: 20px;
 }
 
 @media screen and (max-width: 480px) {
@@ -143,19 +267,34 @@ p {
   text-align: center;
 }
 .header .logo img {
-  width: 30%;
+  width: 20%;
 }
 @media screen and (max-width: 480px) {
-  .header {
-    padding: 18px 0 18px 0;
+  .header .logo img {
+    width: 50% !important;
   }
-  .header .logo .img-logo {
-    width: 35% !important;
+}
+@media screen and (max-width: 1024px) {
+  .header .logo img {
+    width: 35%;
+  }
+}
+.header .logo .home {
+  position: absolute;
+  margin: 10px 0px 0px -70px;
+}
+.header .logo .home .return {
+  font-size: 30px;
+  color: black;
+}
+@media screen and (max-width: 480px) {
+  .header .logo .home {
+    margin: 2px 0px 0px -70px !important;
   }
 }
 @media screen and (max-width: 767px) {
-  .header {
-    padding: 30px;
+  .header .logo .home {
+    margin: 5px 0px 0px -70px;
   }
 }
 
@@ -216,18 +355,6 @@ p {
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
 }
-.reserv .btn {
-  text-align: center;
-}
-.reserv .btn button {
-  border: none;
-  padding: 15px;
-  font-size: 15px;
-  color: #FFFFFF;
-  border-radius: 50px;
-  font-family: "Roboto", sans-serif;
-  background: linear-gradient(#FF79DA, #9356DC);
-}
 
 .fonct {
   padding: 50px;
@@ -265,6 +392,7 @@ p {
   border: none;
   padding: 30px;
   display: flex;
+  color: black;
   font-size: 15px;
   border-radius: 20px;
   font-family: "Roboto", sans-serif;
@@ -288,6 +416,24 @@ p {
   font-weight: 600;
   text-align: center;
 }
+.fonct .btn-1 button:hover, .fonct .btn-1 button:focus, .fonct .btn-1 button:active,
+.fonct .btn-2 button:hover,
+.fonct .btn-2 button:focus,
+.fonct .btn-2 button:active,
+.fonct .btn-3 button:hover,
+.fonct .btn-3 button:focus,
+.fonct .btn-3 button:active {
+  background-color: #F5EDFF;
+}
+.fonct .btn-1 button:hover i, .fonct .btn-1 button:focus i, .fonct .btn-1 button:active i,
+.fonct .btn-2 button:hover i,
+.fonct .btn-2 button:focus i,
+.fonct .btn-2 button:active i,
+.fonct .btn-3 button:hover i,
+.fonct .btn-3 button:focus i,
+.fonct .btn-3 button:active i {
+  color: #9356DC;
+}
 .fonct h2 {
   margin-bottom: 30px;
 }
@@ -303,52 +449,120 @@ p {
 .restau .cards-list {
   margin: 30px 0px 30px 0px;
 }
-.restau .card {
+.restau .cards-list .card {
+  display: flex;
   margin-bottom: 20px;
   position: relative;
   flex-direction: column;
   background-color: #FFFFFF;
 }
-.restau .card img {
+.restau .cards-list .card img {
   height: 300px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 @media screen and (max-width: 480px) {
-  .restau .card img {
+  .restau .cards-list .card img {
     height: 210px;
   }
 }
-.restau .card .new {
+.restau .cards-list .card .new {
+  right: 0;
+  width: 90px;
   padding: 6px;
   position: absolute;
+  margin: 2% 1% 0% 0%;
   background-color: #99E2D0;
 }
-.restau .card .new p {
+.restau .cards-list .card .new p {
+  color: #6cad9d;
+  font-size: 15px;
   font-weight: 800;
+  text-align: center;
   font-family: "Roboto", sans-serif;
 }
-.restau .card .card-body {
+@media screen and (max-width: 767px) {
+  .restau .cards-list .card .new {
+    margin: 4% 3% 0% 0%;
+  }
+}
+.restau .cards-list .card .card-body {
   padding: 15px 20px 25px 20px;
 }
-.restau .card .card-body h5 {
-  font-size: 17px;
+.restau .cards-list .card .card-body h5 {
+  font-size: 20px;
   font-weight: 600;
   font-family: "Roboto", sans-serif;
 }
-.restau .card .card-body p {
+.restau .cards-list .card .card-body p {
+  font-size: 16px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
-.restau .card .card-body .favoris {
-  text-align: end;
-  margin-top: -2%;
+
+.present {
+  height: 68vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.restau .card .card-body .favoris .ic i {
-  font-size: 25px;
+@media screen and (max-width: 480px) {
+  .present {
+    height: 33vh !important;
+  }
 }
-.restau .card .card-body .favoris .ic i:active {
-  color: #9356DC;
+@media screen and (max-width: 1024px) {
+  .present {
+    height: 49vh;
+  }
+}
+
+.franc {
+  background-image: url("../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+}
+@media screen and (max-width: 1024px) {
+  .franc {
+    background-position: bottom;
+  }
+}
+
+.note {
+  background-image: url("../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+
+.gout {
+  background-image: url("../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+}
+
+.delice {
+  background-position: bottom;
+  background-image: url("../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+}
+
+.menu-restau {
+  margin-top: -8%;
+  position: relative;
+  background-color: #FFFFFF;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  padding: 50px 30px 50px 30px;
+}
+@media screen and (max-width: 767px) {
+  .menu-restau {
+    margin-top: -15%;
+    padding: 30px 20px 30px 20px !important;
+  }
+}
+.menu-restau .title {
+  display: flex;
+}
+.menu-restau .title .favoris {
+  right: 23px;
+}
+
+.commandes button {
+  width: 200px;
+  margin-bottom: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
