--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -4,6 +4,7 @@
         text-align: center;
         padding: 30px 0 30px 0;
     }
+
     @media screen and (max-width: 767px) {
         .txt {
             font-size: 15px;
@@ -16,35 +17,27 @@
 .reserv {
     padding: 30px;
     background-color: #F7F7F7;
+
     .row {
         flex-direction: column;
     }
+
     h1,
     p {
         text-align: center;
         font-family: $text;
         margin-bottom: 20px;
     }
-    .btn {
-        text-align: center;
-        button {
-            border: none;
-            padding: 15px;
-            font-size: 15px;
-            color: $white;
-            border-radius: 50px;
-            font-family: $text;
-            background: linear-gradient($pink, $purple);
-        }
-    }
 }
 
 .fonct {
     padding: 50px;
     background-color: $white;
+
     .row {
         flex-direction: column;
     }
+
     .btn-1,
     .btn-2,
     .btn-3 {
@@ -70,11 +63,11 @@
             border: none;
             padding: 30px;
             display: flex;
+            color: black;
             font-size: 15px;
             border-radius: 20px;
             font-family: $text;
             background-color: #F7F7F7;
-
             i {
                 color: grey;
                 font-size: 20px;
@@ -89,11 +82,21 @@
                 font-weight: 600;
                 text-align: center;
             }
+            &:hover,
+            &:focus,
+            &:active {
+                background-color: #F5EDFF;
+                i {
+                    color: $purple;
+                }
+            }
         }
     }
+
     h2 {
         margin-bottom: 30px;
     }
+
     @media screen and (max-width: 767px) {
         padding: 50px 20px 50px 20px;
     }
@@ -101,61 +104,115 @@
 
 .restau {
     padding: 30px 20px 30px 20px;
+
     .cards-list {
         margin: 30px 0px 30px 0px;
-    }
-    .card {
-        margin-bottom: 20px;
-        position: relative;
-        flex-direction: column;
-        background-color: $white;
-        img {
-            height: 300px;
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            @media screen and (max-width: 480px) {
-                height: 210px;
+        .card {
+            display: flex;
+            margin-bottom: 20px;
+            position: relative;
+            flex-direction: column;
+            background-color: $white;
+    
+            img {
+                height: 300px;
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+    
+                @media screen and (max-width: 480px) {
+                    height: 210px;
+                }
             }
-        }
-
-        .new {
-            padding: 6px;
-            position: absolute;
-            background-color: #99E2D0;
-
-            p {
-                font-weight: 800;
-                font-family: $text;
+    
+            .new {
+                right: 0;
+                width: 90px;
+                padding: 6px;
+                position: absolute;
+                margin: 2% 1% 0% 0%;
+                background-color: $green;
+    
+                p {
+                    color: #6cad9d;
+                    font-size: 15px;
+                    font-weight: 800;
+                    text-align: center;
+                    font-family: $text;
+                }
+                @media screen and (max-width: 767px) {
+                    margin: 4% 3% 0% 0%;
+                }
             }
-        }
-
-        .card-body {
-            padding: 15px 20px 25px 20px;
-            h5 {
-                font-size: 17px;
-                font-weight: 600;
-                font-family: $text;
-            }
-
-            p {
-                font-weight: 300;
-                font-family: $text;
-            }
-
-            .favoris {
-                text-align: end;
-                margin-top: -2%;
-
-                .ic {
-                    i {
-                        font-size: 25px;
-
-                        &:active {
-                            color: $purple;
-                        }
-                    }
+    
+            .card-body {
+                padding: 15px 20px 25px 20px;
+    
+                h5 {
+                    font-size: 20px;
+                    font-weight: 600;
+                    font-family: $text;
+                }
+    
+                p {
+                    font-size: 16px;
+                    font-weight: 300;
+                    font-family: $text;
                 }
             }
         }
+    }
+}
+
+.present {
+    height: 68vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    @media screen and (max-width: 480px) {
+        height: 33vh !important;
+    }
+    @media screen and (max-width: 1024px) {
+        height: 49vh;
+    }
+}
+.franc {
+    background-image: url("../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg");
+    @media screen and (max-width: 1024px) {
+        background-position: bottom;
+    }
+}
+.note {
+    background-image: url("../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg");
+}
+.gout {
+    background-image: url("../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+}
+.delice {
+    background-position: bottom;
+    background-image: url("../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg");
+}
+
+.menu-restau {
+    margin-top: -8%;
+    position: relative;
+    background-color: #FFFFFF;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    padding: 50px 30px 50px 30px;
+    @media screen and (max-width: 767px) {
+        margin-top: -15%;
+        padding: 30px 20px 30px 20px !important;
+    }
+    .title {
+        display: flex;
+        .favoris {
+            right: 23px;
+        }
+    }
+}
+.commandes {
+    button {
+        width: 200px;
+        margin-bottom: 30px;
     }
 }
