--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ img {
 }
 
 .h-title {
+  color: black;
   font-size: 32px;
   font-weight: 600;
   font-family: "Shrikhand", cursive;
@@ -30,6 +31,7 @@ img {
 
 .m-title {
   width: 53px;
+  color: black;
   font-size: 18px;
   font-weight: 400;
   padding-bottom: 2px;
@@ -41,12 +43,14 @@ img {
 
 h2,
 h3 {
+  color: black;
   font-size: 22px;
   font-weight: 600;
   font-family: "Roboto", sans-serif;
 }
 
 p {
+  color: black;
   font-family: "Roboto", sans-serif;
 }
 
@@ -71,16 +75,11 @@ p {
 .btn-menu {
   width: 100%;
   border: none;
-  padding: 30px;
+  padding: 10px;
+  margin-bottom: 10px;
   border-radius: 20px;
   background-color: #FFFFFF;
   font-family: "Roboto", sans-serif;
-}
-@media screen and (max-width: 767px) {
-  .btn-menu {
-    padding: 10px;
-    margin-bottom: 10px;
-  }
 }
 .btn-menu .tit-c {
   text-align: left;
@@ -98,8 +97,15 @@ p {
   font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
+@media screen and (max-width: 767px) {
+  .btn-menu .txt p {
+    font-size: 15px;
+  }
+}
 .btn-menu .valid-btn {
   right: 0;
+  right: 50px;
+  margin-top: -30px;
   position: absolute;
 }
 .btn-menu .valid-btn .price {
@@ -113,14 +119,18 @@ p {
   }
 }
 .btn-menu .valid-btn .valid {
+  margin-left: 17px;
+  margin-right: -21px;
+  padding: 30px 30px 22px 30px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: #99E2D0;
 }
 @media screen and (max-width: 767px) {
   .btn-menu .valid-btn .valid {
-    margin-right: -18px;
-    padding: 30px 30px 18px 30px;
+    margin-left: 0px !important;
+    margin-right: -18px !important;
+    padding: 30px 30px 18px 30px !important;
   }
 }
 .btn-menu .valid-btn .valid i {
@@ -129,8 +139,14 @@ p {
 }
 @media screen and (max-width: 767px) {
   .btn-menu .valid-btn {
-    right: 34px;
-    margin-top: -28px;
+    right: 34px !important;
+    margin-top: -28px !important;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .btn-menu .valid-btn {
+    right: 50px;
+    margin-top: -30px;
   }
 }
 
@@ -562,7 +578,7 @@ p {
 
 .commandes button {
   width: 200px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 /*# sourceMappingURL=style.css.map */
