--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -346,6 +346,7 @@ p {
 }
 
 .int .txt {
+  color: black;
   font-size: 25px;
   text-align: center;
   padding: 30px 0 30px 0;
@@ -367,6 +368,7 @@ p {
 }
 .reserv h1,
 .reserv p {
+  color: black;
   text-align: center;
   font-family: "Roboto", sans-serif;
   margin-bottom: 20px;
@@ -451,6 +453,7 @@ p {
   color: #9356DC;
 }
 .fonct h2 {
+  color: black;
   margin-bottom: 30px;
 }
 @media screen and (max-width: 767px) {
@@ -465,24 +468,28 @@ p {
 .restau .cards-list {
   margin: 30px 0px 30px 0px;
 }
-.restau .cards-list .card {
+.restau .cards-list a {
+  color: black;
+  text-decoration: none;
+}
+.restau .cards-list a .card {
   display: flex;
   margin-bottom: 20px;
   position: relative;
   flex-direction: column;
   background-color: #FFFFFF;
 }
-.restau .cards-list .card img {
+.restau .cards-list a .card img {
   height: 300px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 @media screen and (max-width: 480px) {
-  .restau .cards-list .card img {
+  .restau .cards-list a .card img {
     height: 210px;
   }
 }
-.restau .cards-list .card .new {
+.restau .cards-list a .card .new {
   right: 0;
   width: 90px;
   padding: 6px;
@@ -490,7 +497,7 @@ p {
   margin: 2% 1% 0% 0%;
   background-color: #99E2D0;
 }
-.restau .cards-list .card .new p {
+.restau .cards-list a .card .new p {
   color: #6cad9d;
   font-size: 15px;
   font-weight: 800;
@@ -498,19 +505,21 @@ p {
   font-family: "Roboto", sans-serif;
 }
 @media screen and (max-width: 767px) {
-  .restau .cards-list .card .new {
+  .restau .cards-list a .card .new {
     margin: 4% 3% 0% 0%;
   }
 }
-.restau .cards-list .card .card-body {
+.restau .cards-list a .card .card-body {
   padding: 15px 20px 25px 20px;
 }
-.restau .cards-list .card .card-body h5 {
+.restau .cards-list a .card .card-body h5 {
+  color: black;
   font-size: 20px;
   font-weight: 600;
   font-family: "Roboto", sans-serif;
 }
-.restau .cards-list .card .card-body p {
+.restau .cards-list a .card .card-body p {
+  color: black;
   font-size: 16px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
