--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,5 +1,6 @@
 .int {
     .txt {
+        color: black;
         font-size: 25px;
         text-align: center;
         padding: 30px 0 30px 0;
@@ -24,6 +25,7 @@
 
     h1,
     p {
+        color: black;
         text-align: center;
         font-family: $text;
         margin-bottom: 20px;
@@ -94,6 +96,7 @@
     }
 
     h2 {
+        color: black;
         margin-bottom: 30px;
     }
 
@@ -107,56 +110,62 @@
 
     .cards-list {
         margin: 30px 0px 30px 0px;
-        .card {
-            display: flex;
-            margin-bottom: 20px;
-            position: relative;
-            flex-direction: column;
-            background-color: $white;
-    
-            img {
-                height: 300px;
-                border-top-left-radius: 20px;
-                border-top-right-radius: 20px;
-    
-                @media screen and (max-width: 480px) {
-                    height: 210px;
+        a {
+            color: black;
+            text-decoration: none;
+            .card {
+                display: flex;
+                margin-bottom: 20px;
+                position: relative;
+                flex-direction: column;
+                background-color: $white;
+        
+                img {
+                    height: 300px;
+                    border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
+        
+                    @media screen and (max-width: 480px) {
+                        height: 210px;
+                    }
                 }
-            }
-    
-            .new {
-                right: 0;
-                width: 90px;
-                padding: 6px;
-                position: absolute;
-                margin: 2% 1% 0% 0%;
-                background-color: $green;
-    
-                p {
-                    color: #6cad9d;
-                    font-size: 15px;
-                    font-weight: 800;
-                    text-align: center;
-                    font-family: $text;
+        
+                .new {
+                    right: 0;
+                    width: 90px;
+                    padding: 6px;
+                    position: absolute;
+                    margin: 2% 1% 0% 0%;
+                    background-color: $green;
+        
+                    p {
+                        color: #6cad9d;
+                        font-size: 15px;
+                        font-weight: 800;
+                        text-align: center;
+                        font-family: $text;
+                    }
+                    @media screen and (max-width: 767px) {
+                        margin: 4% 3% 0% 0%;
+                    }
                 }
-                @media screen and (max-width: 767px) {
-                    margin: 4% 3% 0% 0%;
-                }
-            }
-    
-            .card-body {
-                padding: 15px 20px 25px 20px;
-    
-                h5 {
-                    font-size: 20px;
-                    font-weight: 600;
-                    font-family: $text;
-                }
-    
-                p {
-                    font-size: 16px;
-                    font-weight: 300;
-                    font-family: $text;
+        
+                .card-body {
+                    padding: 15px 20px 25px 20px;
+        
+                    h5 {
+                        color: black;
+                        font-size: 20px;
+                        font-weight: 600;
+                        font-family: $text;
+                    }
+        
+                    p {
+                        color: black;
+                        font-size: 16px;
+                        font-weight: 300;
+                        font-family: $text;
+                    }
                 }
             }
         }
