--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,6 +8,13 @@ $white: #FFFFFF;
 $title: 'Shrikhand', cursive;
 $text: 'Roboto', sans-serif;
 
+// Color for the loader
+
+$dot-1: #3f2064;
+$dot-2: #d85bb5;
+$dot-3: #000000;
+$dot-4: #95e9d4;
+
 // Générales
 
 * {
