--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,36 +76,38 @@ p {
   width: 100%;
   border: none;
   padding: 10px;
+  display: flex;
+  cursor: pointer;
+  color: black;
   margin-bottom: 10px;
   border-radius: 20px;
+  flex-direction: column;
   background-color: #FFFFFF;
   font-family: "Roboto", sans-serif;
 }
 .btn-menu .tit-c {
-  text-align: left;
-}
-.btn-menu .tit-c .ent-title {
   font-size: 18px;
+  color: black;
   font-weight: 800;
+  text-align: left;
   font-family: "Roboto", sans-serif;
 }
 .btn-menu .txt {
   display: flex;
 }
-.btn-menu .txt p {
+.btn-menu .txt .text {
   font-size: 18px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
 }
 @media screen and (max-width: 767px) {
-  .btn-menu .txt p {
+  .btn-menu .txt .text {
     font-size: 15px;
   }
 }
 .btn-menu .valid-btn {
-  right: 0;
   right: 50px;
-  margin-top: -30px;
+  margin-top: 11px;
   position: absolute;
 }
 .btn-menu .valid-btn .price {
@@ -119,18 +121,18 @@ p {
   }
 }
 .btn-menu .valid-btn .valid {
+  display: none;
   margin-left: 17px;
   margin-right: -21px;
-  padding: 30px 30px 22px 30px;
+  padding: 25px 30px 25px 30px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   background-color: #99E2D0;
 }
 @media screen and (max-width: 767px) {
   .btn-menu .valid-btn .valid {
-    margin-left: 0px !important;
-    margin-right: -18px !important;
-    padding: 30px 30px 18px 30px !important;
+    margin: -40px -18px 0 12px !important;
+    padding: 22px 30px 20px 30px !important;
   }
 }
 .btn-menu .valid-btn .valid i {
@@ -140,7 +142,7 @@ p {
 @media screen and (max-width: 767px) {
   .btn-menu .valid-btn {
     right: 34px !important;
-    margin-top: -28px !important;
+    margin-top: 8px !important;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -148,6 +150,13 @@ p {
     right: 50px;
     margin-top: -30px;
   }
+}
+.btn-menu:focus .price {
+  margin-left: -90px;
+}
+.btn-menu:focus .valid {
+  display: block;
+  transition: 4s;
 }
 
 .favoris {
@@ -157,7 +166,6 @@ p {
 .favoris .ic i,
 .favoris .heart i {
   font-size: 25px;
-  background: linear-gradient(#9356DC, #FF79DA);
 }
 .favoris .ic i:active, .favoris .ic i:focus, .favoris .ic i:hover,
 .favoris .heart i:active,
@@ -165,7 +173,7 @@ p {
 .favoris .heart i:hover {
   color: #9356DC;
   transition: background 4s;
-  background: linear-gradient(#9356DC, #FF79DA);
+  color: linear-gradient(#9356DC, #FF79DA);
 }
 
 .favoris-ind {
@@ -343,6 +351,9 @@ p {
 }
 .footer .links a i {
   margin-right: 5px;
+}
+.footer .links a .fa-utensils {
+  margin-right: 10px;
 }
 
 .int .txt {
@@ -531,6 +542,9 @@ p {
   background-repeat: no-repeat;
   background-position: center;
 }
+.present h1 {
+  color: rgba(0, 0, 0, 0);
+}
 @media screen and (max-width: 480px) {
   .present {
     height: 33vh !important;
@@ -585,6 +599,9 @@ p {
   right: 23px;
 }
 
+.commandes h6 {
+  display: none;
+}
 .commandes button {
   width: 200px;
   margin-bottom: 50px;
@@ -595,10 +612,14 @@ p {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 1000;
   display: flex;
   position: fixed;
   align-items: center;
   justify-content: center;
+  animation-duration: 2.5s;
+  animation-name: fade-loader;
+  animation-fill-mode: forwards;
   background: linear-gradient(#FF79DA, #9356DC);
 }
 .loader .dot {
@@ -606,7 +627,7 @@ p {
   height: 60px;
   margin-right: 15px;
   border-radius: 50%;
-  animation-duration: 3s;
+  animation-duration: 2.5s;
   animation-iteration-count: infinite;
   animation-name: wave-loader, wave-color;
   animation-timing-function: ease-in-out, linear;
@@ -650,6 +671,16 @@ p {
   }
   75% {
     background: #95e9d4;
+  }
+}
+@keyframes fade-loader {
+  0%, 50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+    visibility: hidden;
   }
 }
 
