--- a/assets/scss/_header-footer.scss
+++ b/assets/scss/_header-footer.scss
@@ -53,6 +53,9 @@
                 i {
                     margin-right: 5px;
                 }
+                .fa-utensils {
+                    margin-right: 10px;
+                }
             }
         }
 }
