--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -95,28 +95,31 @@ p {
     width: 100%;
     border: none;
     padding: 10px;
+    display: flex;
+    cursor: pointer;
+    color: black;
     margin-bottom: 10px;
     border-radius: 20px;
+    flex-direction: column;
     background-color: #FFFFFF;
     font-family: $text;
 
     .tit-c {
+        font-size: 18px;
+        color: black;
+        font-weight: 800;
         text-align: left;
-
-        .ent-title {
-            font-size: 18px;
-            font-weight: 800;
-            font-family: $text;
-        }
+        font-family: $text;
     }
 
     .txt {
         display: flex;
 
-        p {
+        .text {
             font-size: 18px;
             font-weight: 300;
             font-family: $text;
+
             @media screen and (max-width: 767px) {
                 font-size: 15px;
             }
@@ -124,9 +127,8 @@ p {
     }
 
     .valid-btn {
-        right: 0;
         right: 50px;
-        margin-top: -30px;
+        margin-top: 11px;
         position: absolute;
 
         .price {
@@ -138,19 +140,18 @@ p {
                 margin-right: 10px;
             }
         }
-
         .valid {
+            display: none;
             margin-left: 17px;
             margin-right: -21px;
-            padding: 30px 30px 22px 30px;
+            padding: 25px 30px 25px 30px;
             border-top-right-radius: 20px;
             border-bottom-right-radius: 20px;
             background-color: $green;
-
+           
             @media screen and (max-width: 767px) {
-                margin-left: 0px !important;
-                margin-right: -18px !important;
-                padding: 30px 30px 18px 30px !important;
+                margin: -40px -18px 0 12px !important;
+                padding: 22px 30px 20px 30px !important;
             }
 
             i {
@@ -161,15 +162,26 @@ p {
 
         @media screen and (max-width: 767px) {
             right: 34px !important;
-            margin-top: -28px !important;
+            margin-top: 8px !important;
         }
 
         @media screen and (max-width: 1024px) {
             right: 50px;
             margin-top: -30px;
         }
+
+    }
+    &:focus {
+        .price {
+            margin-left: -90px;
+        }
+        .valid {
+            display: block;
+            transition: 4s;
+        }
     }
 }
+
 
 .favoris {
     position: absolute;
@@ -179,14 +191,13 @@ p {
     .heart {
         i {
             font-size: 25px;
-            background: linear-gradient($purple, $pink);
 
             &:active,
             &:focus,
             &:hover {
                 color: $purple;
                 transition: background 4s;
-                background: linear-gradient($purple, $pink);
+                color: linear-gradient($purple, $pink);
             }
         }
     }
