--- a/assets/scss/_loader.scss
+++ b/assets/scss/_loader.scss
@@ -1,83 +1,83 @@
-.loader {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1000;
-    display: flex;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
-    animation-duration: 2.5s;
-    animation-name: fade-loader;
-    animation-fill-mode: forwards;
-    background: linear-gradient($pink, $purple);
-    .dot {
-        width: 60px;
-        height: 60px;
-        margin-right: 15px;
-        border-radius: 50%;
-        animation-duration: 2.5s;
-        animation-iteration-count: infinite;
-        animation-name: wave-loader, wave-color;
-        animation-timing-function: ease-in-out, linear;
-        .dot-1 {
-            animation-delay: 0.1s;
-        }
-        .dot-2 {
-            animation-delay: 0.3s;
-        }
-        .dot-3 {
-            animation-delay: 0.6s;
-        }
-        .dot-4 {
-            animation-delay: 0.9s;
-        }
-    }
-}
+// .loader {
+//     top: 0;
+//     left: 0;
+//     right: 0;
+//     bottom: 0;
+//     z-index: 1000;
+//     display: flex;
+//     position: fixed;
+//     align-items: center;
+//     justify-content: center;
+//     animation-duration: 2.5s;
+//     animation-name: fade-loader;
+//     animation-fill-mode: forwards;
+//     background: linear-gradient($pink, $purple);
+//     .dot {
+//         width: 60px;
+//         height: 60px;
+//         margin-right: 15px;
+//         border-radius: 50%;
+//         animation-duration: 2.5s;
+//         animation-iteration-count: infinite;
+//         animation-name: wave-loader, wave-color;
+//         animation-timing-function: ease-in-out, linear;
+//         .dot-1 {
+//             animation-delay: 0.1s;
+//         }
+//         .dot-2 {
+//             animation-delay: 0.3s;
+//         }
+//         .dot-3 {
+//             animation-delay: 0.6s;
+//         }
+//         .dot-4 {
+//             animation-delay: 0.9s;
+//         }
+//     }
+// }
 
 // Animation for the dots
 
-@keyframes wave-loader {
-    0%,
-    100% {
-      transform: translateY(-30px);
-    }
-    25% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(0);
-    }
-    75% {
-      transform: translateY(0);
-    }
-}
+// @keyframes wave-loader {
+//     0%,
+//     100% {
+//       transform: translateY(-30px);
+//     }
+//     25% {
+//       transform: translateY(0);
+//     }
+//     50% {
+//       transform: translateY(0);
+//     }
+//     75% {
+//       transform: translateY(0);
+//     }
+// }
 
-@keyframes wave-color {
-    0%,
-    100% {
-      background: $dot-1;
-    }
-    25% {
-      background: $dot-2;
-    }
-    50% {
-      background: $dot-3;
-    }
-    75% {
-      background: $dot-4;
-    }
-}
+// @keyframes wave-color {
+//     0%,
+//     100% {
+//       background: $dot-1;
+//     }
+//     25% {
+//       background: $dot-2;
+//     }
+//     50% {
+//       background: $dot-3;
+//     }
+//     75% {
+//       background: $dot-4;
+//     }
+// }
 
-@keyframes fade-loader {
-  0%,
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    z-index: -1;
-    visibility: hidden;
-  }
-}
+// @keyframes fade-loader {
+//   0%,
+//   50% {
+//     opacity: 1;
+//   }
+//   100% {
+//     opacity: 0;
+//     z-index: -1;
+//     visibility: hidden;
+//   }
+// }
