--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -130,54 +130,31 @@ p {
         right: 50px;
         margin-top: 11px;
         position: absolute;
-
         .price {
             font-size: 18px;
             font-weight: 800;
             font-family: $text;
-
-            @media screen and (max-width: 767px) {
-                margin-right: 10px;
-            }
         }
         .valid {
-            display: none;
             margin-left: 17px;
             margin-right: -21px;
-            padding: 25px 30px 25px 30px;
+            padding: 26px 20px 23px 20px;
             border-top-right-radius: 20px;
             border-bottom-right-radius: 20px;
             background-color: $green;
-           
-            @media screen and (max-width: 767px) {
-                margin: -40px -18px 0 12px !important;
-                padding: 22px 30px 20px 30px !important;
-            }
-
             i {
                 color: #FFFFFF;
                 font-size: 20px;
             }
+            @media screen and (max-width: 767px) {
+                margin-right: -30px;
+                padding: 26px 20px 20px 20px;
+            }
         }
-
-        @media screen and (max-width: 767px) {
-            right: 34px !important;
-            margin-top: 8px !important;
-        }
-
-        @media screen and (max-width: 1024px) {
-            right: 50px;
-            margin-top: -30px;
-        }
-
-    }
-    &:focus {
-        .price {
-            margin-left: -90px;
-        }
-        .valid {
-            display: block;
-            transition: 4s;
+        &:focus {
+            .valid {
+                transition: background 4s;
+            }
         }
     }
 }
@@ -207,8 +184,6 @@ p {
         }
     }
 }
-
-
 .favoris-ind {
     margin-top: -40px;
     margin-right: 20px;
