--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -134,8 +134,12 @@ p {
             font-size: 18px;
             font-weight: 800;
             font-family: $text;
+            @media screen and (max-width: 767px) {
+                margin-right: -10px;
+            }
         }
         .valid {
+            
             margin-left: 17px;
             margin-right: -21px;
             padding: 26px 20px 23px 20px;
@@ -151,11 +155,12 @@ p {
                 padding: 26px 20px 20px 20px;
             }
         }
-        &:focus {
+        &:hover {
             .valid {
-                transition: background 4s;
+                display: block !important;
             }
         }
+        
     }
 }
 
